# transplat

./: .agentize.yaml  .gitignore  pyproject.toml
.milestones/: issue-1-milestone-1.md
config/: main.yaml
draft/: Challenge.md  Design.md  Design1.md  Design2.md
engine/: GeoPIM_architecture_design.md
scripts/: analyze_adjacent_gaussians.py  analyze_cache_efficiency.py  analyze_common_reuse.py  analyze_feature_depth_correlation.py  analyze_gaussian_contribution.py  analyze_gaussian_redundancy.py  analyze_gaussian_smoothness.py  analyze_hbm_traffic.py  analyze_sampling_locality.py  generate_phase_summary.py  profile_hbm_by_stage.py  run_all_timing_tests.sh
src/: main.py
src/geopim/: README.md  __init__.py
src/geopim/benchmark/: BENCHMARK_REPORT.md  __init__.py  benchmark.py  detailed_profiler.py  e2e_benchmark.py  encoder_stage_profiler.py  full_e2e_test.py  profiler.py  realistic_benchmark.py  run_all_benchmarks.py  transplat_bench.py  transplat_profiler.py
src/geopim/interface/: __init__.py  geopim_sampler.py
src/geopim/simulator/: __init__.py  controller.py  geopim_simulator.py  hbm_model.py  pim_unit.py
src/geopim/timing/: __init__.py  cycle_model.py  power_model.py
src/geopim/utils/: __init__.py  bank_scheduler.py  fp16_ops.py
src/misc/: benchmarker.py  fast_sh_rotation.py  sh_rotation_optimized.py
src/model/: model_wrapper.py
src/model/decoder/: cuda_splatting.py  decoder_splatting_cuda.py
src/model/encoder/: encoder_trans.py
tests/: conftest.py
tests/geopim/: test_hbm_model.py  test_integration.py  test_pim_unit.py  test_timing.py
(+1 files in other folders)
